# eLLM

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  PYTHON_API.md  PYTHON_RUST_MAPPING.md  README.md  README.zh-CN.md  RUST_PYTHON_API_GUIDE.md  SAFETENSORS_README.md  async_stream_examples.rs  brief.md  build.py  enhanced_test_client.py  examples.py  pyproject.toml  python_api_example.py  test_installation.py  test_model_loading.py  test_numpy.py  thread_communication_crossbeam.rs
.cargo/: config.toml
.trae/rules/: git-commit-message.md
alignment/: README.md  alignment_utils.py  compare.py  requirements.txt  rope_alignment_test.rs  test_rope_alignment.py
alignment/dump/: python_rope_basic.npy  python_rope_partial.npy  python_rope_yarn.npy
alignment/matmul3/: generate_data.py
alignment/moe_router/: generate_hf_router.py  test_router_alignment.py
alignment/qwen3_moe/: README.md  run_alignment.py
alignment/rms_map/: generate_inputs.py  rms_map_alignment.rs
alignment/rope/: generate_hf_rope.py  rope_alignment.py  rope_alignment_test.rs  test_rope_alignment.py
alignment/rust/: rope.rs
alignment/scripts/: create_new_operator.py
alignment/silu_mul/: debug_test.py  gen_silu_data.py  generate_hf_silu_mul.py  silu_mul_alignment_test.rs  test_silu_mul_alignment.py
alignment/tokenizer/: compare_f16_models.py  compare_layer0.py  compare_layers.py  compare_moe_alignment.py  compare_qwen3_tokenizer.py  compare_rust_dumps.py  compute_hf_f16_model.py  debug_layer0.py  debug_layer0_v2.py  dump_hf_layer_outputs.py  dump_hf_moe_intermediates.py  generate_hf_qwen3_one_token.py  generate_hf_qwen3_tokenizer.py  mirror_and_save.py  mirror_rust_ops.py  multi_batch_alignment.rs  multi_batch_test.rs  multi_token_alignment.rs  qwen3_one_token_alignment.rs  qwen3_tokenizer_alignment.rs  test_qwen3_tokenizer_alignment.py  verify_first_layer.py  verify_operators.py
doc/: runtime_barrier_join_design.md
docs/: attention.md  global_index_lookup.md  index.md  lookup.md  minimal_model_abstraction.md  minimax_m2.5_rope.md  minimax_m2.5_router.md  moe_refactor.md  moe_routing_data_structures.md  schedule.md
docs/en/: index.md  serving.md
docs/operator/: global_index_lookup.md  matmul.md  minimax_m2.5_router.md
docs/zh-CN/: index.md  serving.md
models/: Llama-2-70b-hf.json
models/Llama-2-70b-hf/: config.json
models/Llama-2-7b-hf/: config.json
models/MiniMax-M2.5/: generation_config.json
models/Qwen3-Coder-30B-A3B-Instruct/: config.json  config1.json  config_1m.json
python/: model.py
python/ellm/: __init__.py  generation.py  model.py
scripts/: test_handlers_curl.ps1  test_server.py
skills/align-operators/: SKILL.md
src/: Qwen3.rs  Qwen3Moe.rs  compiler.rs  custom_type.rs  init.rs  kernel.rs  lib.rs  llama.rs  memory.rs  ptensor.rs  python_bindings.rs  qwen3_moe.rs  runtime.rs  serving.rs  transformer.rs
src/Qwen3/: attention.rs  moe_attention.rs  moe_decoder_layer.rs  moe_mlp.rs  moe_model.rs  moe_sparse_moe_block.rs
src/Qwen3Moe/: attention.rs  decoder_layer.rs  mlp.rs  model.rs  moe_layer.rs  sparse_moe_block.rs
src/backup/: config_new.rs  data.rs  enhanced_server.rs  improved_transformer_threading.rs  server.rs  sse_examples.rs  test_api.py  test_batch_client.py  test_client.py  test_cooperative_workers.py  thread_communication_channel.rs  thread_communication_shared_state.rs
src/common/: expert_routing.rs  heap.rs  matmul_params.rs  mod.rs  record.rs  send_sync_ptr.rs  sequence_slice.rs  state.rs  tensor_utils.rs
src/compiler/: assign.rs  left_vector.rs  map.rs  mod.rs  mul.rs  operator.rs  zip_map.rs
src/config/: cli.rs  command_line_interface.rs  config.rs  config_types.rs  config_validator.rs  generation_config.rs  mod.rs  types.rs
src/init/: args.rs  config.rs  heap.rs  matmul_params.rs  mod.rs  record.rs  send_sync_ptr.rs  tokenize.rs
src/kernel/: generic.rs  mod.rs  x86_64.rs
src/llama/: _transformer.rs  attention.rs  attentions.rs  feedforward.rs  generation.py  generation.rs  layer.rs  mod.rs  model.rs  model_loader copy.rs  model_loader.rs  rope.rs  runtime.rs  safetensors_example.rs  safetensors_tests.rs  start.rs  transformer.rs  transformer_block.rs
src/mem_mgr/: allocator.rs  cache.rs  mem_pool.rs  mod.rs  model_loader.rs
src/memory/: cache.rs  mod.rs  model_loader.rs
src/model/: _model_loader.rs  attention.rs  transformer_block.rs
src/moe/: attention.rs  config.rs  decoder_layer.rs  mlp.rs  mod.rs  model.rs  moe_layer.rs  names.rs  sparse_moe_block.rs
src/num_traits/: exp.rs  from_number.rs  sqrt.rs
src/operators/: assign.rs  fake_echo.rs  left_vector.rs  mod.rs  operator.rs  send_sync_ptr.rs
src/ops/: attention.rs  left_vector.rs  mod.rs
src/perf/: tensor_experts_matmul_silu_mul_matmul_perf.rs
src/ptensor/: linear.rs  mod.rs  tensor.rs  tensor_utils.rs
src/python_bindings/: config.rs  transformer.rs  transformer32.rs
src/qwen3_moe/: attention.rs  config.rs  decoder_layer.rs  mlp.rs  mod.rs  model.rs  moe_layer.rs  rope.rs  sparse_moe_block.rs
src/runtime/: barrier.rs  batch_sequence.rs  chat_template.rs  generation_config.rs  huggingface_config.rs  mod.rs  model_loader.rs  operator.rs  prompt.rs  runner.rs  scheduler.rs  sequence_slice.rs  slice_scheduler.rs  spin_barrier.rs  start.rs  state.rs  tensor.rs  tokenizer_loader.rs
src/serving/: batch_prompt.rs  batch_sequence.rs  bootstrap.rs  chat_handlers.rs  chat_template.rs  config.rs  enhanced_server.rs  handlers.rs  mod.rs  model.rs  model_loader.rs  model_setup.rs  monitor.rs  record.rs  resources.rs  runner.rs  schedule.rs  scheduler.rs  server.rs  start copy.rs  start.rs  test_tokenizer.rs  token_reader.rs  types.rs
src/tensor/: core.rs  expert.rs  linear.rs  matmul.rs  mod.rs  moe.rs  ops.rs  queue.rs  routing.rs  storage.rs  tests.rs  transform.rs  utils.rs
src/traits/: exp.rs  from_f32.rs  from_usize.rs  mod.rs  powf.rs  sigmoid.rs  sqrt.rs
src/transformer/: attention.rs  config.rs  decoder_layer.rs  mod.rs  (+7 more)
tests/: qwen3_06b_integration_test.rs  rope_reference_alignment.rs
(+387 files in other folders)
