[package]
name = "eLLM"
version = "0.1.0"
edition = "2021"

[lib]
name = "ellm"
crate-type = ["cdylib", "rlib"]

[dependencies]
num_cpus = "1.13"
regex = "1.10.2"
core_affinity = "0.8.1"
anyhow = "1.0.72"
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.8.5"
num-traits="0.2.19"
itertools = "0.14.0"
num = "0.4.3"
safetensors = "0.4.1"
memmap2 = "0.9.4"
tiktoken-rs = "0.6"
async-stream = "0.3.6"
axum = "0.8.4"
minijinja = "2.12.0"

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
unwind-tables = false
rpath = false

# half = { version = "2.4.1", features = ["num-traits", "std"] }
# linked-hash-map = "0.5.6"
# hurdles = "1.0.1"
# half  = {version = "2.4.1" , features = ["num-traits", "std"] }
# half  = {version = "2.4.1" , features = [ "std"] }
# zip = { version = "0.6", optional = true }
# repugnant-pickle = { git = "https://github.com/KerfuffleV2/repugnant-pickle", features = ["torch"] }
# smol = "1.3.0"
[build-dependencies]
raw-cpuid = "11.0.2"


[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
env_logger = "0.9.0"
approx = "0.5.1"

[toolchain]
channel = "nightly"

[features]
default = []

[profile.dev]
opt-level = 1
lto = "off"
codegen-units = 16
incremental = true
