[package]
name = "eLLM"
version = "0.1.0"
edition = "2021"

[lib]
name = "ellm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rope_alignment_test"
path = "alignment/rope/rope_alignment_test.rs"

[[bin]]
name = "silu_mul_alignment_test"
path = "alignment/silu_mul/silu_mul_alignment_test.rs"

[dependencies]
anyhow = "1.0.72"
async-stream = "0.3.6"
axum = "0.8.4"
core_affinity = "0.8.1"
itertools = "0.14.0"
memmap2 = "0.9.4"
minijinja = "2.12.0"
npy = "0.4.0"
num = "0.4.3"
num-traits = "0.2.19"
num_cpus = "1.13"
once_cell = "1.19"
rand = "0.8.5"
regex = "1.10.2"
safetensors = "0.4.1"
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.108"
tiktoken-rs = "0.6"
thiserror = "1.0"
tokio = { version = "1.52.3", features = ["sync", "net", "rt", "macros"] }

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
unwind-tables = false
rpath = false
incremental = false

[build-dependencies]
raw-cpuid = "11.0.2"

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
approx = "0.5.1"
tempfile = "3.8.1"

[features]
default = []

[profile.dev]
opt-level = 1
lto = "off"
codegen-units = 16
incremental = true
